# open_blender_file

./: Cargo.toml  LICENSE  README.md
assets/: licenses.txt
src/: config.rs  exec.rs  file_normalizer.rs  gui.rs  main.rs  registry.rs  version_checker.rs
src/gui/: about.rs
