[package]
name = "open_blender_file"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
dirs = "5.0.1"
flate2 = "1.0"
getopts = "0.2"
json5 = "0.4.1"
serde = { version = "1.0.202", features = ["derive"] }
zstd = "0.13"

[target."cfg(windows)".dependencies]
lnk = "0.5.1"
winreg = "0.52.0"
